# ofxstatement-traderepublic

./: Pipfile  README.md  pyproject.toml
src/ofxstatement_traderepublic/: plugin.py
tests/: test_plugin.py  traderepublic-events.json  traderepublic-statement.csv
