[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-traderepublic"
version = "0.0.1"
authors = [
  { name="Alson van der Meulen", email="git@alm.nufan.net" },
]
description = "Trade Republic plugin for ofxstatement"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "traderepublic", "tr"]
dependencies = [
  "ofxstatement",
]

[project.urls]
Homepage = "https://github.com/alson/ofxstatement-traderepublic/"

[project.entry-points."ofxstatement"]
traderepublic = "ofxstatement_traderepublic.plugin:TradeRepublicPlugin"
